src/test/ui/hrtb/issue-30786.nll.stderr
error: higher-ranked subtype error
  --> $DIR/issue-30786.rs:113:18
   |
LL |     let filter = map.filter(|x: &_| true);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/issue-30786.rs:115:17
   |
LL |     let count = filter.count(); // Assert that we still have a valid stream.
   |                 ^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

